; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_bookmark.c_dsl_get_bookmarks.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_bookmark.c_dsl_get_bookmarks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FTAG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dsl_get_bookmarks(i8* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i32, i32* @FTAG, align 4
  %13 = call i32 @dsl_pool_hold(i8* %11, i32 %12, i32** %8)
  store i32 %13, i32* %10, align 4
  %14 = load i32, i32* %10, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* %10, align 4
  store i32 %17, i32* %4, align 4
  br label %42

18:                                               ; preds = %3
  %19 = load i32*, i32** %8, align 8
  %20 = load i8*, i8** %5, align 8
  %21 = load i32, i32* @FTAG, align 4
  %22 = call i32 @dsl_dataset_hold(i32* %19, i8* %20, i32 %21, i32** %9)
  store i32 %22, i32* %10, align 4
  %23 = load i32, i32* %10, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %18
  %26 = load i32*, i32** %8, align 8
  %27 = load i32, i32* @FTAG, align 4
  %28 = call i32 @dsl_pool_rele(i32* %26, i32 %27)
  %29 = load i32, i32* %10, align 4
  store i32 %29, i32* %4, align 4
  br label %42

30:                                               ; preds = %18
  %31 = load i32*, i32** %9, align 8
  %32 = load i32*, i32** %6, align 8
  %33 = load i32*, i32** %7, align 8
  %34 = call i32 @dsl_get_bookmarks_impl(i32* %31, i32* %32, i32* %33)
  store i32 %34, i32* %10, align 4
  %35 = load i32*, i32** %9, align 8
  %36 = load i32, i32* @FTAG, align 4
  %37 = call i32 @dsl_dataset_rele(i32* %35, i32 %36)
  %38 = load i32*, i32** %8, align 8
  %39 = load i32, i32* @FTAG, align 4
  %40 = call i32 @dsl_pool_rele(i32* %38, i32 %39)
  %41 = load i32, i32* %10, align 4
  store i32 %41, i32* %4, align 4
  br label %42

42:                                               ; preds = %30, %25, %16
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local i32 @dsl_pool_hold(i8*, i32, i32**) #1

declare dso_local i32 @dsl_dataset_hold(i32*, i8*, i32, i32**) #1

declare dso_local i32 @dsl_pool_rele(i32*, i32) #1

declare dso_local i32 @dsl_get_bookmarks_impl(i32*, i32*, i32*) #1

declare dso_local i32 @dsl_dataset_rele(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
